# shamefile

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  release-plz.toml  shamefile.yaml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  language_request.md  showcase_request.md
.github/workflows/: codeql.yml  dependency-review.yml  lint.yml  pr-title.yml  publish-cargo.yml  publish-npm.yml  publish-pypi.yml  release-drafter.yml  release-plz.yml  sonar.yml  test.yml
e2e_tests/: conftest.py  test_cli.py  test_scanner_edge_cases.py  test_shame_fix.py  test_shame_next.py  test_shame_next_path_traversal.py  test_shame_remove.py  test_yaml_formatting.py
e2e_tests/features/: shame_next_path_traversal.feature  shame_remove.feature
e2e_tests/test_registry/: test_registry_dry_run.py  test_registry_errors.py  test_registry_format_fields.py  test_registry_format_location.py  test_registry_gitignore.py  test_registry_lifecycle.py  test_registry_matching_rename.py  test_registry_shame_vector.py  test_registry_tracking.py  test_registry_yaml_edge_cases.py
e2e_tests/test_token_detection/: test_javascript_token_detection.py  test_python_token_detection.py
npm/shamefile/: README.md  package.json
npm/shamefile-darwin-arm64/: package.json
npm/shamefile-darwin-x64/: package.json
npm/shamefile-linux-arm64/: package.json
npm/shamefile-linux-arm64-musl/: package.json
npm/shamefile-linux-x64/: package.json
npm/shamefile-linux-x64-musl/: package.json
npm/shamefile-win32-arm64/: package.json
npm/shamefile-win32-x64/: package.json
npm/shamefile-windows-arm64/: package.json
npm/shamefile-windows-x64/: package.json
scripts/: coverage.sh
src/: error.rs  gamify.rs  git.rs  languages.rs  lib.rs  main.rs  registry.rs  scanner.rs  syntax.rs  tokens.rs
tests/: integration_tests.rs
tests/fixtures/: sample.js  sample.py
tests/integration/: conftest.py  test_cli.py  test_scanner_edge_cases.py  test_scanner_hidden_files.py  test_shame_next.py  test_token_detection.py  test_token_sync.py  test_yaml_formatting.py
tests/integration/features/: yaml_formatting_docstring.feature
tests/integration/test_registry/: test_registry_dry_run.py  test_registry_encoding.py  test_registry_entries.py  test_registry_errors.py  test_registry_format.py  test_registry_format_fields.py  test_registry_format_location.py  test_registry_format_owner.py  test_registry_format_stability.py  test_registry_gitignore.py  test_registry_lifecycle.py  test_registry_matching.py  test_registry_matching_line_shift.py  test_registry_matching_rename.py  test_registry_ordering.py  test_registry_shame_vector.py  test_registry_stale.py  test_registry_tracking.py  test_registry_yaml_edge_cases.py
tests/integration/test_token_detection/: test_basics.py  test_common.py  test_javascript_token_detection.py  test_python_token_detection.py  test_typescript_token_detection.py
tests/integration/test_token_detection_edge_cases/: test_common.py  test_javascript_token_detection.py  test_python_token_detection.py  test_typescript_token_detection.py
