[package]
name = "shamefile"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"

[[bin]]
name = "shame"
path = "src/main.rs"

[lib]
name = "shamefile"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde", "clock"] }
clap = { version = "4.5.57", features = ["derive"] }
ignore = "0.4.25"
regex = "1.12.3"
regex-syntax = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"

[profile.dev.package."*"]
opt-level = 1

[dev-dependencies]
tempfile = "3"
