[package]
name = "shamefile"
version = "0.1.1"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
description = "Turn linter suppressions from silent technical debt into reviewable, documented decisions."
repository = "https://github.com/BKDDFS/shamefile"
homepage = "https://github.com/BKDDFS/shamefile"
documentation = "https://github.com/BKDDFS/shamefile#readme"
readme = "README.md"
keywords = ["cli", "linter", "suppressions", "code-quality", "pre-commit"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "shame"
path = "src/main.rs"

[lib]
name = "shamefile"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4.25"
regex = "1.12.3"
regex-syntax = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"

[profile.dev.package."*"]
opt-level = 1

[dev-dependencies]
tempfile = "3"
